@@ -129,6 +129,8 @@
     * Split $(PREFIX) into $(PERLPREFIX) and $(PREFIX).  The former
       holds the location of the core libraries.  The latter is the
       optional override prefix supplied by the user.
+    * PREFIX overrides all other *PREFIXes when set in the Makefile.PL.
+      This restores "make install PREFIX=foo".
 
 6.05 Tue Aug 27 16:09:51 PDT 2002
     - Output format of the hint file verbose diagnostic is now in
